# bazel-terraform-nexus-jsonnet-demo

./: .terraform.lock.hcl  BUILD.bazel  README.md  WORKSPACE  main.tf.json  main.tf.jsonnet  secrets.libsonnet  security.libsonnet
